if option value is selected, this value is written to db
